argocd/apps/demo/demo-app-nginx/base/demo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
