argocd/apps/demo/demo-app-nginx/base/demo-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-app-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - demo.app.lab.k8s.io
    port:
      name: http
      number: 80
      protocol: HTTP
